k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ice-creams-app-service
  namespace: default
spec:
  selector:
    app: ice-creams-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
