k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ice-creams-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ice-creams-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ice-creams-app-service
            port:
              number: 80
